--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "jose": "^6.0.11",
     "lucide-react": "^0.511.0",
     "next": "15.3.2",
+    "nodemailer": "^7.0.3",
     "postgres": "^3.4.7",
     "react": "^19.0.0",
     "react-dom": "^19.0.0",
@@ -28,6 +29,7 @@
     "@tailwindcss/postcss": "^4",
     "@types/bcrypt": "^5.0.2",
     "@types/node": "^20",
+    "@types/nodemailer": "^6.4.17",
     "@types/react": "^19",
     "@types/react-dom": "^19",
     "tailwindcss": "^4.1.7",
