--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "jose": "^6.0.11",
     "lucide-react": "^0.511.0",
     "next": "15.3.2",
+    "next-nprogress-bar": "^2.4.7",
     "nodemailer": "^7.0.3",
     "postgres": "^3.4.7",
     "react": "^19.0.0",
