--- a/package.json
+++ b/package.json
@@ -16,9 +16,10 @@
     "canvas": "^3.2.0",
     "class-variance-authority": "^0.7.1",
     "clsx": "^2.1.1",
+    "fs": "^0.0.1-security",
     "jose": "^6.0.11",
     "lucide-react": "^0.511.0",
-    "next": "15.3.6",
+    "next": "^15.5.9",
     "next-nprogress-bar": "^2.4.7",
     "nodemailer": "^7.0.3",
     "pdfjs-dist": "^5.4.394",
